tests/fixtures/invalid/int_add_none.py
# Cannot add Int and None
x: int = 1 + None
